Added link to Rstudio.

--- a/src/views/universal/_navbar-options.njk
+++ b/src/views/universal/_navbar-options.njk
@@ -3,7 +3,8 @@
 {% set research = {
   name: "Research",
   options: [
-    {name: "Research Areas", link: "/research/research-areas"}
+    {name: "Research Areas", link: "/research/research-areas"},
+    {name: "RStudio", link: "/rstudio"}
   ],
   link: "/research"
   }
