Updated RStudio to USU RStudio.

--- a/src/views/universal/_navbar-options.njk
+++ b/src/views/universal/_navbar-options.njk
@@ -4,7 +4,7 @@
   name: "Research",
   options: [
     {name: "Research Areas", link: "/research/research-areas"},
-    {name: "RStudio", link: "/rstudio"}
+    {name: "USU RStudio", link: "/rstudio"}
   ],
   link: "/research"
   }
