--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -1,3 +1,14 @@
+{% set naveenReward = {
+    title: "Naveen Duhan Awarded Outstanding Doctoral Student Researcher",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/profile/1.jpg?a=height&w=6&h=6",
+    date: "Dec 28, 2022",
+    desc: "With 11 publications and being the nominee from the PSC department as an outstanding student, Naveen has been awarded
+    2022-23 Outstanding Doctoral Student Researcher for the College of Agriculture and Applied Sciences (CAAS). This is a very competitive
+    reward and he competed among all the applicants from the other departments in CAAS.",
+    link: "/news/naveenReward"
+  }
+%}
+
 {% set mitchellGoodbye = {
     title: "Mitchell Millerberg Completes Summer Internship",
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/events/2022-Mitchell-Farewell/PXL_20220812_194602003.MP.jpg?a=height&w=6&h=6",
@@ -442,8 +453,8 @@ benchmark were implement in the DeepHPI webserver",
   }
 %}
 
-{% set general = [mitchellGoodbye, simar, mitchell, apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
+{% set general = [naveenReward, mitchellGoodbye, simar, mitchell, apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
 {% set science = [profeatx, hucovaria, trustdb, tritikbdb, deepNEC, weconet, alfanet, malivhu, hucopia,covidtracker, pyseqrna,newdeephpi,
 ranchSATdb, legumeSSRdb, citSATdb, PlantmSubP, GreeningDB, PredHPI, ligpred, APiNET, lacsubpred, PLpred, rslpred, rbpred, AtSubP] %}
 {% set media = [cultivate, capitolHill, boundaries, weedRevolution, heroesNight,nihFunds,saltStress,undergradGrants] %}
-{% set latest = [cultivate, capitolHill, boundaries] %}
+{% set latest = [naveenReward,cultivate, capitolHill] %}
