Added google site verification for accessing accesibility report.

--- a/src/views/universal/_header.njk
+++ b/src/views/universal/_header.njk
@@ -8,6 +8,7 @@
     <base href="{{ baseUrl }}" />
     <meta content="" name="description">
     <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta name="google-site-verification" content="2-Svhw9Qhe5EAIfA5keJ6nM8aomIIuqilidnNb-QF8s" />
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700|Open+Sans:400,400i,600,700" rel="stylesheet">
