Adding new publication links.

--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -1,3 +1,14 @@
+{% set pub2023 = [
+  {
+    authors:'',
+    content:'',
+    doiLink:'',
+    doiTitle:'',
+    year:'2023'
+  }
+]
+%}
+
 {% set pub2022 = [
   {
     authors:'<u><em>Kataria, R</em></u>. and Kaundal, R<sup>*</sup>',
