--- a/src/views/pages/publications/subpages/conf.njk
+++ b/src/views/pages/publications/subpages/conf.njk
@@ -1,4 +1,5 @@
 {% from 'components/conf-card.njk' import confCard %}
+{% from './dates/23-25.njk' import pub2023 %}
 {% from './dates/20-22.njk' import pub2022, pub2021, pub2020 %}
 {% from './dates/17-19.njk' import pub2019, pub2018, pub2017 %}
 {% from './dates/14-16.njk' import pub2016, pub2015, pub2014 %}
@@ -8,6 +9,12 @@
 
 <!-- I'm sorry :( I'll fix this later (I'm not going to fix this) -->
 {% set conferences = [
+    {
+    range: '2023-2025',
+    confs: [
+      {range: '2023-2025', conf: pub2023, year: '2023'}
+    ]
+  },
   {
     range: '2020-2022',
     confs: [
@@ -60,6 +67,7 @@
 <article class="container">
 
   <section class="row justify-content-center">
+    {{ confSelector("2023-2025") }}
     {{ confSelector("2020-2022") }}
     {{ confSelector("2017-2019") }}
     {{ confSelector("2014-2016") }}
