--- a/src/views/pages/publications/subpages/pubs.njk
+++ b/src/views/pages/publications/subpages/pubs.njk
@@ -21,7 +21,7 @@
   </section>
 </article>
 
-<article class="pub-group" id="pub-2020">
+<article class="pub-group d-none" id="pub-2020">
   <section class="py-4">
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2022</h4>
