--- a/src/views/pages/publications/subpages/conf.njk
+++ b/src/views/pages/publications/subpages/conf.njk
@@ -10,9 +10,9 @@
 <!-- I'm sorry :( I'll fix this later (I'm not going to fix this) -->
 {% set conferences = [
     {
-    range: '2023-2025',
+    range: '2023',
     confs: [
-      {range: '2023-2025', conf: pub2023, year: '2023'}
+      {range: '2023', conf: pub2023, year: '2023'}
     ]
   },
   {
@@ -67,7 +67,7 @@
 <article class="container">
 
   <section class="row justify-content-center">
-    {{ confSelector("2023-2025") }}
+    {{ confSelector("2023") }}
     {{ confSelector("2020-2022") }}
     {{ confSelector("2017-2019") }}
     {{ confSelector("2014-2016") }}
