--- a/src/views/pages/publications/subpages/pubs.njk
+++ b/src/views/pages/publications/subpages/pubs.njk
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  {{ pubSelector("2023-2025") }}
+  {{ pubSelector("2023") }}
   {{ pubSelector("2020-2022") }}
   {{ pubSelector("2017-2019") }}
   {{ pubSelector("2014-2016") }}
