Fixed read me on home page for second slider.

--- a/src/views/pages/home/_research-data.njk
+++ b/src/views/pages/home/_research-data.njk
@@ -2,7 +2,7 @@
     heading: "Artificial Intelligence: OMICS bigdata to novel biological discoveries",
     desc: "Computational modeling through pattern recognition, develop novel algorithms and...",
     img: "/image/raw/bioinfo/AI-processor-LowRes-v1.jpg",
-    link: ""
+    link: "/research"
   }
 %}
 
@@ -10,7 +10,7 @@
     heading: "Precision Agriculture: Robotics for integrated weed management (IWM)",
     desc: "Incorporate sensing technology for precise IWM, minimize damage to crop, environment...",
     img: "/image/raw/bioinfo/sabbi-post/p_agr.jpg",
-    link: ""
+    link: "/research"
   }
 %}
 
@@ -18,7 +18,7 @@
     heading: "gdhd",
     desc: "fsffh",
     img: "afhsfdsh",
-    link: ""
+    link: "/research"
   }
 %}
 
@@ -26,7 +26,7 @@
     heading: "Host-pathogen interactions: Understanding mechanisms of infectious diseases",
     desc: "Explore cross-kingdom threats and identify novel therapeutic candidates...",
     img: "/image/raw/bioinfo/HPI_new.gif",
-    link: ""
+    link: "/research"
   }
 %}
 
@@ -34,7 +34,7 @@
     heading: "Metagenomics: Bioinformatics solutions for crop improvement",
     desc: "Investigate diversity of enzymes in soil metagenomes and develop advanced tools...",
     img: "/image/raw/bioinfo/meta_new.png",
-    link: ""
+    link: "/research"
   }
 %}
 
@@ -42,7 +42,7 @@
     heading: "Protein function prediction: Annotation of novel proteomes",
     desc: "Identify novel protein features, train in an AI framework, implement as web servers...",
     img: "/image/raw/bioinfo/functionalbg_resized.png?w=271&h=211",
-    link: ""
+    link: "/research"
   }
 %}
 
@@ -50,7 +50,7 @@
     heading: "NGS studies: Deciphering and making sense of the complex -omics bigdata",
     desc: "Identification of novel expressed genes from transcriptomics studies, methylation patterns...and more text",
     img: "/image/raw/bioinfo/datamining-lowres.png",
-    link: ""
+    link: "/research"
   }
 %}
 
