--- a/src/views/components/research-carousel-card.njk
+++ b/src/views/components/research-carousel-card.njk
@@ -7,7 +7,7 @@
       <section class="px-3 flex-text-wrapper h-100">
         <div class="card-title mb-3">{{ researchItem.heading }}</div>
         <div class="card-subtitle mb-3">{{ researchItem.desc }}</div>
-        <div class="read-more-end"><span class="text">Read More</span></div>
+        <div class="read-more-end"><span class="text"><a class="kbl-link dull" href={{researchItem.link}}>Read More</a></span></div>
       </section>
     </div>
   </article>
