--- a/src/views/universal/_navbar.njk
+++ b/src/views/universal/_navbar.njk
@@ -19,6 +19,9 @@
             <a class="kbl-btn-1" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
                 Covid 19 Tracker
             </a>
+            <a class="kbl-btn-1 ms-2" target="_blank" rel="noopener noreferrer" href="http://bioinfocore.usu.edu/">
+                BioinfoCore
+            </a>
             <a class="kbl-btn-1 ms-2" href="/contact">
                 Contact
             </a>
@@ -74,6 +77,9 @@
           <div class="col-12 text-end">
             <a class="kbl-btn-1" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
                 Covid 19 Tracker
+            </a>
+            <a class="kbl-btn-1 ms-2" target="_blank" rel="noopener noreferrer" href="http://bioinfocore.usu.edu/">
+                BioinfoCore
             </a>
             <a class="kbl-btn-1 ms-2" href="/contact">
                 Contact
