--- a/src/views/pages/home/the-team.njk
+++ b/src/views/pages/home/the-team.njk
@@ -14,7 +14,7 @@
                           and is the Director of Bioinformatics Facility at the Center for Integrated BioSystems, USU.
                         </p>
                         <h6>
-                          <a href="http://bioinfo.usu.edu/people/rakesh" class="kbl-link">Read More</a>
+                          <a href="https://bioinfo.usu.edu/people/rakesh" class="kbl-link">Read More</a>
                         </h6>
                       </div>
                       <span class="kbl-social-wrapper">
