--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -22,7 +22,7 @@
 
     <div class="row justify-content-center">
       <div class="col-12 text-center">
-        <a class="kbl-btn-1-solid" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
+        <a class="kbl-btn-1-solid" target="_blank" rel="noopener noreferrer" href="https://bioinfo.usu.edu/covidTracker/">
           Covid 19 Tracker
         </a>
         <a class="kbl-btn-1-solid ms-2" href="/contact">
