--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -1,21 +1,21 @@
 {% set predhpi = {
     img: "/image/bioinfo/tools/predHpi.PNG",
     title: "PredHPI",
-    link: "http://bioinfo.usu.edu/PredHPI/"
+    link: "https://bioinfo.usu.edu/PredHPI/"
   }
 %}
 
 {% set apinet = {
     img: "/image/bioinfo/tools/api-net.PNG",
     title: "AP-iNET",
-    link: "http://bioinfo.usu.edu/AP-iNET/"
+    link: "https://bioinfo.usu.edu/AP-iNET/"
   }
 %}
 
 {% set plantmSubp = {
     img: "/image/bioinfo/tools/plantmSubp.PNG",
     title: "Plant-mSubP",
-    link: "http://bioinfo.usu.edu/Plant-mSubP/"
+    link: "https://bioinfo.usu.edu/Plant-mSubP/"
   }
 %}
 
@@ -36,42 +36,42 @@
 {% set plPred = {
     img: "/image/bioinfo/tools/plpred.PNG",
     title: "PLpred",
-    link: "http://bioinfo.usu.edu/PLpred/"
+    link: "https://bioinfo.usu.edu/PLpred/"
   }
 %}
 
 {% set greeningDB = {
     img: "/image/bioinfo/tools/greeningdb.png",
     title: "GreeningDB",
-    link: "http://bioinfo.usu.edu/GreeningDB/"
+    link: "https://bioinfo.usu.edu/GreeningDB/"
   }
 %}
 
 {% set citSATdb = {
     img: "/image/bioinfo/tools/citsatdb.png",
     title: "citSATdb",
-    link: "http://bioinfo.usu.edu/citSATdb/"
+    link: "https://bioinfo.usu.edu/citSATdb/"
   }
 %}
 
 {% set legumeSSRdb = {
     img: "/image/bioinfo/tools/legumessdb.png",
     title: "legumeSSRdb",
-    link: "http://bioinfo.usu.edu/legumeSSRdb/"
+    link: "https://bioinfo.usu.edu/legumeSSRdb/"
   }
 %}
 
 {% set lacSubPred = {
     img: "/image/bioinfo/tools/lacsubpred.PNG",
     title: "LacSubPred",
-    link: "http://bioinfo.usu.edu/lacsubpred/"
+    link: "https://bioinfo.usu.edu/lacsubpred/"
   }
 %}
 
 {% set ligPred = {
     img: "/image/bioinfo/tools/ligpred.PNG",
     title: "LigPred",
-    link: "http://bioinfo.usu.edu/ligpred/"
+    link: "https://bioinfo.usu.edu/ligpred/"
   }
 %}
 
@@ -92,91 +92,91 @@
 {% set necMiner = {
     img: "/image/bioinfo/tools/deepnec.png",
     title: "deepNEC",
-    link: "http://bioinfo.usu.edu/deepNEC/"
+    link: "https://bioinfo.usu.edu/deepNEC/"
   }
 %}
 
 {% set deepHPI = {
     img: "/image/bioinfo/tools/deephpi.png",
     title: "deepHPI",
-    link: "http://bioinfo.usu.edu/deepHPI/"
+    link: "https://bioinfo.usu.edu/deepHPI/"
   }
 %}
 
 {% set huco = {
     img: "/image/bioinfo/tools/covid.jpg",
     title: "HuCoPIA",
-    link: "http://bioinfo.usu.edu/hucopia/home/"
+    link: "https://bioinfo.usu.edu/hucopia/home/"
   }
 %}
 
 {% set ranchSAT = {
     img: "/image/bioinfo/tools/ranchsatdb.png",
     title: "ranchSATdb",
-    link: "http://bioinfo.usu.edu/ranchSATdb/"
+    link: "https://bioinfo.usu.edu/ranchSATdb/"
   }
 %}
 
 {% set alfaNet = {
     img: "/image/bioinfo/tools/alfanet.png",
     title: "alfaNET",
-    link: "http://bioinfo.usu.edu/alfanet/"
+    link: "https://bioinfo.usu.edu/alfanet/"
   }
 %}
 
 {% set weconet = {
     img: "/image/bioinfo/tools/weconet.png",
     title: "WeCoNET",
-    link: "http://bioinfo.usu.edu/weconet/"
+    link: "https://bioinfo.usu.edu/weconet/"
   }
 %}
 
 {% set malivhu = {
     img: "/image/bioinfo/tools/malivhu.png",
     title: "Malivhu",
-    link: "http://bioinfo.usu.edu/malivhu/"
+    link: "https://bioinfo.usu.edu/malivhu/"
   }
 %}
 
 {% set trustdb = {
     img: "/image/bioinfo/tools/trustdb2.png",
     title: "TRustDB",
-    link: "http://bioinfo.usu.edu/trustdb/"
+    link: "https://bioinfo.usu.edu/trustdb/"
   }
 %}
 
 {% set tritikbdb = {
     img: "/image/bioinfo/tools/tritikbdb.png",
     title: "TritiKBdb",
-    link: "http://bioinfo.usu.edu/tritikbdb/"
+    link: "https://bioinfo.usu.edu/tritikbdb/"
   }
 %}
 
 {% set myDockDB = {
     img: "/image/bioinfo/tools/myDockDB.png",
     title: "myDockDB",
-    link: "http://bioinfo.usu.edu/myDockDB/"
+    link: "https://bioinfo.usu.edu/myDockDB/"
   }
 %}
 
 {% set HuCoVarIA= {
     img: "/image/bioinfo/tools/hucovaria.jpg",
     title: "HuCoVarIA",
-    link: "http://bioinfo.usu.edu/hucovaria/"
+    link: "https://bioinfo.usu.edu/hucovaria/"
   }
 %}
 
 {% set ProFeatX= {
     img: "/image/bioinfo/tools/profeatx.png",
     title: "ProFeatX",
-    link: "http://bioinfo.usu.edu/profeatx/"
+    link: "https://bioinfo.usu.edu/profeatx/"
   }
 %}
 
 {% set pySeqRNA= {
     img: "/image/bioinfo/tools/pyseqrna.png",
     title: "pySeqRNA",
-    link: "http://bioinfo.usu.edu/pyseqrna/"
+    link: "https://bioinfo.usu.edu/pyseqrna/"
   }
 %}
 
