--- a/src/views/pages/home/_home.scss
+++ b/src/views/pages/home/_home.scss
@@ -1,5 +1,5 @@
 .research-fact {
-  background-image: url('http://bioinfocore.usu.edu/raikou/image/bioinfo/brands/brand_bg.jpg');
+  background-image: url('https://bioinfocore.usu.edu/raikou/image/bioinfo/brands/brand_bg.jpg');
 
   background-size: cover;
   background-repeat: no-repeat;
