--- a/src/views/universal/_navbar.njk
+++ b/src/views/universal/_navbar.njk
@@ -16,10 +16,10 @@
 
         <section class="row pb-4">
           <div class="col-12 text-end">
-            <a class="kbl-btn-1" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
+            <a class="kbl-btn-1" target="_blank" rel="noopener noreferrer" href="https://bioinfo.usu.edu/covidTracker/">
                 Covid 19 Tracker
             </a>
-            <a class="kbl-btn-1 ms-2" target="_blank" rel="noopener noreferrer" href="http://bioinfocore.usu.edu/">
+            <a class="kbl-btn-1 ms-2" target="_blank" rel="noopener noreferrer" href="https://bioinfocore.usu.edu/">
                 BioinfoCore
             </a>
             <a class="kbl-btn-1 ms-2" href="/contact">
@@ -75,10 +75,10 @@
 
         <section class="row pb-4">
           <div class="col-12 text-end">
-            <a class="kbl-btn-1" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
+            <a class="kbl-btn-1" target="_blank" rel="noopener noreferrer" href="https://bioinfo.usu.edu/covidTracker/">
                 Covid 19 Tracker
             </a>
-            <a class="kbl-btn-1 ms-2" target="_blank" rel="noopener noreferrer" href="http://bioinfocore.usu.edu/">
+            <a class="kbl-btn-1 ms-2" target="_blank" rel="noopener noreferrer" href="https://bioinfocore.usu.edu/">
                 BioinfoCore
             </a>
             <a class="kbl-btn-1 ms-2" href="/contact">
