--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -106,7 +106,7 @@
 {% set huco = {
     img: "/image/bioinfo/tools/covid.jpg",
     title: "HuCoPIA",
-    link: "https://bioinfo.usu.edu/hucopia/home/"
+    link: "https://bioinfo.usu.edu/hucopia/"
   }
 %}
 
