--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -177,12 +177,19 @@
     img: "/image/bioinfo/tools/pyseqrna.png",
     title: "pySeqRNA",
     link: "https://bioinfo.usu.edu/pyseqrna/"
-  }
+  },
+ 
 %}
+ {% set AtSubP2= {
+    img: "/image/bioinfo/tools/atsubp2.png",
+    title: "AtSubP-2.0",
+    link: "https://bioinfo.usu.edu/AtSubP2/"
+  }
+ %}
 
 
 {% set hpi = [predhpi, apinet, deepHPI, huco, malivhu, HuCoVarIA] %}
-{% set clpt = [plantmSubp, atSubP, rslPredP, plPred] %}
+{% set clpt = [AtSubP2, plantmSubp, atSubP, rslPredP, plPred] %}
 {% set dbs = [greeningDB, citSATdb, legumeSSRdb, ranchSAT, alfaNet, weconet, trustdb, tritikbdb,myDockDB] %}
 {% set bioenergy = [lacSubPred, ligPred] %}
 {% set metagenomics = [necMiner] %}
