--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -274,6 +274,6 @@
 {% set staff = [naveen, shelby, raghav, roussie] %}
 
 {% set bioinfoStaff = [roussie] %}
-{% set gradStudents = [naveen, raghav, david, simar] %}
-{% set undergradStudents = [colin, kolton, andrew] %}
-{% set alumni = [mitchell, shelby, caleb, cristian, kaige, matt, nikhil, raul, suyash, udarika] %}
+{% set gradStudents = [naveen, raghav, david ] %}
+{% set undergradStudents = [ andrew] %}
+{% set alumni = [colin, simar,kolton, mitchell, shelby, caleb, cristian, kaige, matt, nikhil, raul, suyash, udarika] %}
