--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -186,10 +186,16 @@
     link: "https://bioinfo.usu.edu/AtSubP2/"
   }
  %}
+  {% set RSLPred2= {
+    img: "/image/bioinfo/tools/rslpred2.png",
+    title: "RSLPred-2.0",
+    link: "https://bioinfo.usu.edu/RSLPred-2.0/"
+  }
+ %}
 
 
 {% set hpi = [predhpi, apinet, deepHPI, huco, malivhu, HuCoVarIA] %}
-{% set clpt = [AtSubP2, plantmSubp, atSubP, rslPredP, plPred] %}
+{% set clpt = [AtSubP2, RSLPred2, plantmSubp, atSubP, rslPredP, plPred] %}
 {% set dbs = [greeningDB, citSATdb, legumeSSRdb, ranchSAT, alfaNet, weconet, trustdb, tritikbdb,myDockDB] %}
 {% set bioenergy = [lacSubPred, ligPred] %}
 {% set metagenomics = [necMiner] %}
