--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -453,8 +453,17 @@ benchmark were implement in the DeepHPI webserver",
   }
 %}
 
+{% set fullbrightnews = {
+    title: "Fulbright, NAHEP Doctoral Students Bring Big Data and Ideas to USU Bioinformatics Lab",
+    date: "June 12, 2023",
+    type: "USU Today",
+    desc: "The Utah State University Bioinformatics Facility recently hosted two graduate students funded by prestigious scholarships.",
+    link: "https://www.usu.edu/today/story/fulbright-nahep-doctoral-students-bring-big-data-and-ideas-to-usu-bioinformatics-lab/?nl=907&utm_source=todaynewsletter&utm_medium=email&utm_campaign=nl907&utm_content=fulbright-nahep-doctoral-students-bring-big-data-and-ideas-to-usu-bioinformatics-lab"
+  }
+%}
+
 {% set general = [naveenReward, mitchellGoodbye, simar, mitchell, apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
 {% set science = [profeatx, hucovaria, trustdb, tritikbdb, deepNEC, weconet, alfanet, malivhu, hucopia,covidtracker, pyseqrna,newdeephpi,
 ranchSATdb, legumeSSRdb, citSATdb, PlantmSubP, GreeningDB, PredHPI, ligpred, APiNET, lacsubpred, PLpred, rslpred, rbpred, AtSubP] %}
-{% set media = [cultivate, capitolHill, boundaries, weedRevolution, heroesNight,nihFunds,saltStress,undergradGrants] %}
+{% set media = [fullbrightnews, cultivate, capitolHill, boundaries, weedRevolution, heroesNight,nihFunds,saltStress,undergradGrants] %}
 {% set latest = [naveenReward,cultivate, capitolHill] %}
