--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -1,9 +1,16 @@
 {% set pub2023 = [
+   {
+    authors:'<u><em>Guevara, D</em></u> and R<sup>*</sup>',
+    content:'ProFeatX: a parallelized protein feature extraction suite for machine learning. <em>Computational and Structural Biotechnology Journal</em> 21: 796-801.  ',
+    doiLink:'https://doi.org/10.3389/fpls.2022.1066421',
+    doiTitle:'https://doi.org/10.3389/fpls.2022.1066421',
+    year:'2023'
+  },
   {
-    authors:'',
-    content:'',
-    doiLink:'',
-    doiTitle:'',
+    authors:'Mahalingam, R<sup>*</sup>,<u><em>Duhan, N</em></u>, Kaundal, R, Smertenko, A, Nazarov, T and Bregitzer, P',
+    content:'Heat and drought induced transcriptomic changes in barley varieties with contrasting stress response phenotypes. <em>Frontiers in Plant Science </em> 13: 1066421 ',
+    doiLink:'https://doi.org/10.3389/fpls.2022.1066421',
+    doiTitle:'https://doi.org/10.3389/fpls.2022.1066421',
     year:'2023'
   }
 ]
@@ -12,9 +19,9 @@
 {% set pub2022 = [
   {
     authors:'<u><em>Kataria, R</em></u>. and Kaundal, R<sup>*</sup>',
-    content:'TRustDB: A comprehensive bioinformatics resource for understanding the complete Wheat - Stem Rust host-pathogen interactome. <em>Database</em> (in press).',
-    doiLink:'trustdb/',
-    doiTitle:'http://bioinfo.usu.edu/trustdb/',
+    content:'TRustDB: A comprehensive bioinformatics resource for understanding the complete Wheat - Stem Rust host-pathogen interactome. <em>Database</em> Volume 2022, baac068',
+    doiLink:'https://doi.org/10.1093/database/baac068',
+    doiTitle:'https://doi.org/10.1093/database/baac068',
     year:'2022'
   },
   {
