--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -1,6 +1,6 @@
 {% set pub2023 = [
     {
-    authors:'<u><em>Duhan, N</em></u>,'Kaur, S<sup>$^</sup> and Kaundal, R<sup>*</sup>',
+    authors:'<u><em>Duhan, N</em></u>,Kaur, S<sup>$^</sup> and Kaundal, R<sup>*</sup>',
     content:'ranchSATdb: a Genome-wide Simple Sequence Repeat (SSR) Markers Database of Livestock Species for Mutant Germplasm Characterization and Improving Farm Animal Health. <em>Genes</em> 14(7): 1481',
     doiLink:'https://doi.org/10.3390/genes14071481',
     doiTitle:'https://doi.org/10.3390/genes14071481',
