--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -1,20 +1,20 @@
 {% set pub2023 = [
     {
-    authors:'<u><em>Duhan, N</em></u>,Kaur, S<sup>$^</sup> and Kaundal, R<sup>*</sup>',
+    authors:'<u><em>Duhan, N</em></u>,Kaur, S<sup>^</sup> and Kaundal, R<sup>*</sup>',
     content:'ranchSATdb: a Genome-wide Simple Sequence Repeat (SSR) Markers Database of Livestock Species for Mutant Germplasm Characterization and Improving Farm Animal Health. <em>Genes</em> 14(7): 1481',
     doiLink:'https://doi.org/10.3390/genes14071481',
     doiTitle:'https://doi.org/10.3390/genes14071481',
     year:'2023'
   },
     {
-    authors:'Kaur, S<sup>$^</sup>, Seem K,  Kumar, S<sup>*</sup>, Kaundal, R<sup>*</sup>, and Mohapatra, T ',
+    authors:'Kaur, S<sup>^</sup>, Seem K,  Kumar, S<sup>*</sup>, Kaundal, R<sup>*</sup>, and Mohapatra, T ',
     content:'Comparative Genome-wide Analysis of MicroRNAs and Their Target Genes in Roots of Contrasting Indica Rice Cultivars under Reproductive-Stage Drought. <em>Genes</em> 14(7): 1390',
     doiLink:'https://doi.org/10.3390/genes14071390',
     doiTitle:'https://doi.org/10.3390/genes14071390',
     year:'2023'
   },
   {
-    authors:'<u><em>Kataria, R</em></u>, Kaur, S<sup>$^</sup> and Kaundal, R<sup>*</sup>',
+    authors:'<u><em>Kataria, R</em></u>, Kaur, S<sup>^</sup> and Kaundal, R<sup>*</sup>',
     content:'Deciphering the Complete Human-Monkeypox Virus Interactome: Identifying Immune Responses and Potential Drug Targets. <em>Frontiers in Immunology </em>14: 1116988. ',
     doiLink:'https://doi.org/10.3389/fimmu.2023.1116988',
     doiTitle:'https://doi.org/10.3389/fimmu.2023.1116988',
@@ -28,7 +28,7 @@
     year:'2023'
   },
   {
-    authors:'Kaur, S<sup>$^</sup>, Seem K, <u><em>Duhan, N</em></u>, Kumar, S<sup>*</sup>, Kaundal, R<sup>*</sup>, and Mohapatra, T ',
+    authors:'Kaur, S<sup>^</sup>, Seem K, <u><em>Duhan, N</em></u>, Kumar, S<sup>*</sup>, Kaundal, R<sup>*</sup>, and Mohapatra, T ',
     content:'Transcriptome and Physio-Biochemical Profiling Reveals Differential Responses of Rice Cultivars at Reproductive-stage Drought Stress. <em>International Journal of Molecular Sciences</em> 24(2): 1002.',
     doiLink:'https://doi.org/10.1016/j.csbj.2022.12.044',
     doiTitle:'https://doi.org/10.1016/j.csbj.2022.12.044',
