added PRGminer on tools page

--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -204,6 +204,12 @@
     link: "https://bioinfo.usu.edu/hpinet/"
   }
  %}
+ {% set PRGminer= {
+    img: "/image/bioinfo/tools/prgminer.png",
+    title: "PRGminer",
+    link: "https://bioinfo.usu.edu/prgminer/"
+  }
+ %}
 
 {% set hpi = [predhpi, apinet, deepHPI, huco, malivhu, HuCoVarIA] %}
 {% set clpt = [AtSubP2, RSLpred2, plantmSubp, atSubP, rslPredP, plPred] %}
@@ -211,5 +217,6 @@
 {% set bioenergy = [lacSubPred, ligPred] %}
 {% set metagenomics = [deepNEC2, necMiner ] %}
 {% set ngsPackages = [pySeqRNA] %}
+{% set rgenes = [PRGminer] %}
 {% set descriptors = [ProFeatX] %}
 {% set disease = [rbPred] %}
