--- a/src/views/pages/tools/tools.njk
+++ b/src/views/pages/tools/tools.njk
@@ -44,9 +44,11 @@
     {{ toolSection("Databases", dbs, "db") }}
     {{ toolSection("Metagenomics", metagenomics, "metagenomics") }}
     {{ toolSection("NGS Packages", ngsPackages, "ngsPack") }}
+    {{ toolSection("Plant Resistance Genes", rgenes, "rgenes") }}
     {{ toolSection("Descriptors", descriptors, "descriptors") }}
     {{ toolSection("Bioenergy", bioenergy, "bionrg") }}
     {{ toolSection("Disease Forecasting", disease, "disease") }}
+   
   </article>
 
   {% include "universal/_footer.njk" %}
