--- a/src/views/pages/tools/tools.njk
+++ b/src/views/pages/tools/tools.njk
@@ -20,7 +20,7 @@
       </div>
     </div>
   </article>
-<article class="container">
+<article class="container-fluid">
 <div class = "row justify-content-center text-center">
 <div class="col-12 mb-4" style="margin:auto">
 	<a href="tools#hpi" class="btn btn-md btn-block btn-outline-primary  my-1">Host-Pathogen Interactions</a>
