chnaged category on tool page

--- a/src/views/pages/tools/tools.njk
+++ b/src/views/pages/tools/tools.njk
@@ -28,7 +28,7 @@
   <a href="tools#db" class="btn btn-md btn-block btn-outline-info my-1">Databases</a>
 	<a href="tools#metagenomics" class="btn btn-md btn-block btn-outline-success my-1 ">Metagenomics</a>
   <a href="tools#ngsPack" class="btn btn-md btn-block btn-outline-warning my-1">NGS Packages</a>
-  <a href="tools#rgenes" class="btn btn-md btn-block btn-outline-warning my-1">Plant Resistance Genes</a>
+  <a href="tools#rgenes" class="btn btn-md btn-block btn-outline-warning my-1">Functional Annotation</a>
   <a href="tools#descriptors" class="btn btn-md btn-block btn-outline-info my-1">Descriptors</a>
 	<a href="tools#bionrg" class="btn btn-md btn-block btn-outline-secondary my-1 ">Bioenergy</a>
 	<a href="tools#disease" class="btn btn-md btn-block btn-outline-dark my-1">Disease Forecasting</a>
@@ -45,7 +45,7 @@
     {{ toolSection("Databases", dbs, "db") }}
     {{ toolSection("Metagenomics", metagenomics, "metagenomics") }}
     {{ toolSection("NGS Packages", ngsPackages, "ngsPack") }}
-    {{ toolSection("Plant Resistance Genes", rgenes, "rgenes") }}
+    {{ toolSection("Functional Annotation", rgenes, "rgenes") }}
     {{ toolSection("Descriptors", descriptors, "descriptors") }}
     {{ toolSection("Bioenergy", bioenergy, "bionrg") }}
     {{ toolSection("Disease Forecasting", disease, "disease") }}
