changed RSLpredP to RSLpred

--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -28,7 +28,7 @@
 
 {% set rslPredP = {
     img: "/image/bioinfo/tools/rslpred.PNG",
-    title: "RSLpredP",
+    title: "RSLpred",
     link: "https://webs.iiitd.edu.in/raghava/rslpred/"
   }
 %}
