--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -1,21 +1,21 @@
 {% set predhpi = {
     img: "/image/bioinfo/tools/predHpi.PNG",
     title: "PredHPI",
-    link: "https://bioinfo.usu.edu/PredHPI/"
+    link: "https://kaabil.net/PredHPI/"
   }
 %}
 
 {% set apinet = {
     img: "/image/bioinfo/tools/api-net.PNG",
     title: "AP-iNET",
-    link: "https://bioinfo.usu.edu/AP-iNET/"
+    link: "https://kaabil.net/AP-iNET/"
   }
 %}
 
 {% set plantmSubp = {
     img: "/image/bioinfo/tools/plantmSubp.PNG",
     title: "Plant-mSubP",
-    link: "https://bioinfo.usu.edu/Plant-mSubP/"
+    link: "https://kaabil.net/Plant-mSubP/"
   }
 %}
 
@@ -36,42 +36,42 @@
 {% set plPred = {
     img: "/image/bioinfo/tools/plpred.PNG",
     title: "PLpred",
-    link: "https://bioinfo.usu.edu/PLpred/"
+    link: "https://kaabil.net/PLpred/"
   }
 %}
 
 {% set greeningDB = {
     img: "/image/bioinfo/tools/greeningdb.png",
     title: "GreeningDB",
-    link: "https://bioinfo.usu.edu/GreeningDB/"
+    link: "https://kaabil.net/GreeningDB/"
   }
 %}
 
 {% set citSATdb = {
     img: "/image/bioinfo/tools/citsatdb.png",
     title: "citSATdb",
-    link: "https://bioinfo.usu.edu/citSATdb/"
+    link: "https://kaabil.net/citSATdb/"
   }
 %}
 
 {% set legumeSSRdb = {
     img: "/image/bioinfo/tools/legumessdb.png",
     title: "legumeSSRdb",
-    link: "https://bioinfo.usu.edu/legumeSSRdb/"
+    link: "https://kaabil.net/legumeSSRdb/"
   }
 %}
 
 {% set lacSubPred = {
     img: "/image/bioinfo/tools/lacsubpred.PNG",
     title: "LacSubPred",
-    link: "https://bioinfo.usu.edu/lacsubpred/"
+    link: "https://kaabil.net/lacsubpred/"
   }
 %}
 
 {% set ligPred = {
     img: "/image/bioinfo/tools/ligpred.PNG",
     title: "LigPred",
-    link: "https://bioinfo.usu.edu/ligpred/"
+    link: "https://kaabil.net/ligpred/"
   }
 %}
 
@@ -92,122 +92,122 @@
 {% set necMiner = {
     img: "/image/bioinfo/tools/deepnec.png",
     title: "deepNEC",
-    link: "https://bioinfo.usu.edu/deepNEC/"
+    link: "https://kaabil.net/deepNEC/"
   }
 %}
 
 {% set deepHPI = {
     img: "/image/bioinfo/tools/deephpi.png",
     title: "deepHPI",
-    link: "https://bioinfo.usu.edu/deepHPI/"
+    link: "https://kaabil.net/deepHPI/"
   }
 %}
 
 {% set huco = {
     img: "/image/bioinfo/tools/covid.jpg",
     title: "HuCoPIA",
-    link: "https://bioinfo.usu.edu/hucopia/"
+    link: "https://kaabil.net/hucopia/"
   }
 %}
 
 {% set ranchSAT = {
     img: "/image/bioinfo/tools/ranchsatdb.png",
     title: "ranchSATdb",
-    link: "https://bioinfo.usu.edu/ranchSATdb/"
+    link: "https://kaabil.net/ranchSATdb/"
   }
 %}
 
 {% set alfaNet = {
     img: "/image/bioinfo/tools/alfanet.png",
     title: "alfaNET",
-    link: "https://bioinfo.usu.edu/alfanet/"
+    link: "https://kaabil.net/alfanet/"
   }
 %}
 
 {% set weconet = {
     img: "/image/bioinfo/tools/weconet.png",
     title: "WeCoNET",
-    link: "https://bioinfo.usu.edu/weconet/"
+    link: "https://kaabil.net/weconet/"
   }
 %}
 
 {% set malivhu = {
     img: "/image/bioinfo/tools/malivhu.png",
     title: "Malivhu",
-    link: "https://bioinfo.usu.edu/malivhu/"
+    link: "https://kaabil.net/malivhu/"
   }
 %}
 
 {% set trustdb = {
     img: "/image/bioinfo/tools/trustdb2.png",
     title: "TRustDB",
-    link: "https://bioinfo.usu.edu/trustdb/"
+    link: "https://kaabil.net/trustdb/"
   }
 %}
 
 {% set tritikbdb = {
     img: "/image/bioinfo/tools/tritikbdb.png",
     title: "TritiKBdb",
-    link: "https://bioinfo.usu.edu/tritikbdb/"
+    link: "https://kaabil.net/tritikbdb/"
   }
 %}
 
 {% set myDockDB = {
     img: "/image/bioinfo/tools/myDockDB.png",
     title: "myDockDB",
-    link: "https://bioinfo.usu.edu/myDockDB/"
+    link: "https://kaabil.net/myDockDB/"
   }
 %}
 
 {% set HuCoVarIA= {
     img: "/image/bioinfo/tools/hucovaria.jpg",
     title: "HuCoVarIA",
-    link: "https://bioinfo.usu.edu/hucovaria/"
+    link: "https://kaabil.net/hucovaria/"
   }
 %}
 
 {% set ProFeatX= {
     img: "/image/bioinfo/tools/profeatx.png",
     title: "ProFeatX",
-    link: "https://bioinfo.usu.edu/profeatx/"
+    link: "https://kaabil.net/profeatx/"
   }
 %}
 
 {% set pySeqRNA= {
     img: "/image/bioinfo/tools/pyseqrna.png",
     title: "pySeqRNA",
-    link: "https://bioinfo.usu.edu/pyseqrna/"
+    link: "https://kaabil.net/pyseqrna/"
   }
  
 %}
  {% set AtSubP2= {
     img: "/image/bioinfo/tools/atsubp2.png",
     title: "AtSubP-2.0",
-    link: "https://bioinfo.usu.edu/AtSubP2/"
+    link: "https://kaabil.net/AtSubP2/"
   }
  %}
   {% set RSLpred2= {
     img: "/image/bioinfo/tools/rslpred2.png",
     title: "RSLpred-2.0",
-    link: "https://bioinfo.usu.edu/RSLpred2/"
+    link: "https://kaabil.net/RSLpred2/"
   }
  %}
   {% set deepNEC2= {
     img: "/image/bioinfo/tools/deepnec2.png",
     title: "deepNEC-2.0",
-    link: "https://bioinfo.usu.edu/deepnec-2.0/"
+    link: "https://kaabil.net/deepnec-2.0/"
   }
  %}
   {% set HPInet= {
     img: "/image/bioinfo/tools/hpinet.png",
     title: "HPInet",
-    link: "https://bioinfo.usu.edu/hpinet/"
+    link: "https://kaabil.net/hpinet/"
   }
  %}
  {% set PRGminer= {
     img: "/image/bioinfo/tools/prgminer.png",
     title: "PRGminer",
-    link: "https://bioinfo.usu.edu/prgminer/"
+    link: "https://kaabil.net/prgminer/"
   }
  %}
 
