--- a/assets/tools/sequence/css/sequence-theme.basic.css
+++ b/assets/tools/sequence/css/sequence-theme.basic.css
@@ -20,7 +20,7 @@
  * Copyright © 2015 Ian Lunn Design Limited unless otherwise stated.
  */
 
-@import url(http://fonts.googleapis.com/css?family=Roboto:900);
+@import url(https://fonts.googleapis.com/css?family=Roboto:900);
 
 body,
 html,
