Added news item for Naveen's PhD defense

--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -1,3 +1,13 @@
+{% set naveenDefends = {
+    title: "Naveen Duhan Successfully Defends His PhD Dissertation",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/profile/1.jpg?a=height&w=6&h=6",
+    date: "",
+    desc: "Naveen Duhan successfully defended his PhD dissertation on . His dissertation was titled \"Computational Prediction of Host-Pathogen Protein-Protein Interactions\". 
+    He was advised by Dr. Rakesh Kaundal Congratulations Naveen!",
+    link: "/news/naveenDefends"
+  }
+%}
+
 {% set naveenReward = {
     title: "Naveen Duhan Awarded Outstanding Doctoral Student Researcher",
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/profile/1.jpg?a=height&w=6&h=6",
