--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -471,7 +471,7 @@ benchmark were implement in the DeepHPI webserver",
   }
 %}
 
-{% set general = [naveenReward, mitchellGoodbye, simar, mitchell, apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
+{% set general = [naveenDefends, naveenReward, mitchellGoodbye, simar, mitchell, apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
 {% set science = [profeatx, hucovaria, trustdb, tritikbdb, deepNEC, weconet, alfanet, malivhu, hucopia,covidtracker, pyseqrna,newdeephpi,
 ranchSATdb, legumeSSRdb, citSATdb, PlantmSubP, GreeningDB, PredHPI, ligpred, APiNET, lacsubpred, PLpred, rslpred, rbpred, AtSubP] %}
 {% set media = [fullbrightnews, cultivate, capitolHill, boundaries, weedRevolution, heroesNight,nihFunds,saltStress,undergradGrants] %}
