--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -1,8 +1,8 @@
 {% set naveenDefends = {
     title: "Naveen Duhan Successfully Defends His PhD Dissertation",
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/profile/1.jpg?a=height&w=6&h=6",
-    date: "",
-    desc: "Naveen Duhan successfully defended his PhD dissertation on . His dissertation was titled \"Computational Prediction of Host-Pathogen Protein-Protein Interactions\". 
+    date: "Nov 18, 2023",
+    desc: "Naveen Duhan successfully defended his PhD dissertation on November 18th, 2023. His dissertation was titled \"Computational Prediction of Host-Pathogen Protein-Protein Interactions\". 
     He was advised by Dr. Rakesh Kaundal Congratulations Naveen!",
     link: "/news/naveenDefends"
   }
