--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -210,8 +210,14 @@
     link: "https://kaabil.net/prgminer/"
   }
  %}
+ {% set HuPoxNET= {
+  img: "/image/bioinfo/tools/prgminer.png",
+  title: "HuPoxNET",
+  link: "https://kaabil.net/hupoxnet/"
+}
+%}
 
-{% set hpi = [predhpi, apinet, deepHPI, huco, malivhu, HuCoVarIA] %}
+{% set hpi = [predhpi, apinet, deepHPI, huco, malivhu, HuCoVarIA, HuPoxNET] %}
 {% set clpt = [AtSubP2, RSLpred2, plantmSubp, atSubP, rslPredP, plPred] %}
 {% set dbs = [HPInet, greeningDB, citSATdb, legumeSSRdb, ranchSAT, alfaNet, weconet, trustdb, tritikbdb,myDockDB] %}
 {% set bioenergy = [lacSubPred, ligPred] %}
