--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -1,3 +1,29 @@
+{% set pub2024 = [
+    {
+    authors:'Simardeep Kaur, Karishma Seem, Naveen Duhan, Suresh Kumar, Rakesh Kaundal, Trilochan Mohapatra',
+    content:'Comparative miRNome and transcriptome analyses reveal the expression of novel miRNAs in the panicle of rice implicated in sustained agronomic performance under terminal drought stress',
+    doiLink:'https://doi.org/10.1007/s00425-024-04399-x',
+    doiTitle:'https://doi.org/10.1007/s00425-024-04399-x',
+    year:'2024'
+    },
+    {
+    authors:'Jack H Nunberg, Jonna B Westover, Joanne York, Kie Hoon Jung, Kevin W Bailey, Kirsten M Boardman, Minghao Li, Rachel S Furnell, Samantha R Wasson, Justin S Murray, Rakesh Kaundal, Aaron J Thomas, Brian B Gowen',
+    content:'Restoration of virulence in the attenuated Candid#1 vaccine virus requires reversion at both positions 168 and 427 in the envelope glycoprotein GPC',
+    doiLink:'https://doi.org/10.1128/jvi.00112-24',
+    doiTitle:'https://doi.org/10.1128/jvi.00112-24',
+    year:'2024'
+    },
+    {
+    authors:'Simardeep Kaur, Karishma Seem, Deepesh Kumar, Suresh Kumar, Rakesh Kaundal, Trilochan Mohapatra',
+    content:'Biogenesis to functional significance of microRNAs under drought stress in rice: Recent advances and future perspectives',
+    doiLink:'https://doi.org/10.1016/j.stress.2024.100447',
+    doiTitle:'https://doi.org/10.1016/j.stress.2024.100447',
+    year:'2024'
+    }
+
+]
+%}
+
 {% set pub2023 = [
     {
     authors:'<u><em>Duhan, N</em></u>,Kaur, S<sup>^</sup> and Kaundal, R<sup>*</sup>',
