--- a/src/views/pages/publications/subpages/pubs.njk
+++ b/src/views/pages/publications/subpages/pubs.njk
@@ -19,6 +19,18 @@
       {% endfor %}
     </div>
   </section>
+
+  <section class="py-4">
+    <div class="kbl-header-bar py-2 text-center mb-2">
+      <h4 class="kbl-heading my-auto">2023</h4>
+    </div>
+    <div class="pub-container">
+      {% for article in pub2023 %}
+        {{ publication(article) }}
+      {% endfor %}
+    </div>
+  </section>
+
 </article>
 
 <article class="pub-group d-none" id="pub-2023">
